--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "C_Cpp.default.includePath": ["/tensorflow-serving/**", "/tensorflow/**"]
+    "C_Cpp.default.includePath": [
+        "/tensorflow-serving/**",
+        "/tensorflow/**"
+    ],
+    "python.pythonPath": "/Users/guillermogomezbella/opt/anaconda3/bin/python"
 }
