--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "dockerFile": "../Dockerfile",
+    "dockerFile": "../Dockerfile-dev",
     "extensions": ["ms-vscode.cpptools"],
     "appPort": ["8500:8500"]
 }
